# J-Challenge

./: .dockerignore  .gitignore  Cargo.toml  readme.md  stress.js
.github/workflows/: ci.yaml
apps/cache_master/: Cargo.toml
apps/cache_master/src/: app_common.rs  app_net.rs  main.rs
apps/cache_master/src/core/domain/models/: error.rs  mod.rs  node.rs
apps/cache_master/src/core/domain/models/usecases/: assign_node_use_case.rs  get_key_use_case.rs  mod.rs  put_key_use_case.rs  remove_node_use_case.rs
apps/cache_master/src/core/domain/services/: consistent_hasher_service.rs  mod.rs  network_service.rs
apps/cache_master/src/core/usecases/: assign_node_use_case.rs  get_key_use_case.rs  mod.rs  put_key_use_case.rs  remove_node_use_case.rs
apps/cache_master/src/infrastructure/: app_state.rs  di.rs  mod.rs
apps/cache_master/src/infrastructure/adapters/controllers/: mod.rs  request_controller.rs
apps/cache_master/src/infrastructure/adapters/services/: dashmap_consistent_hasher_service.rs  mod.rs  tcp_network_service.rs  utils.rs
apps/cache_master/src/infrastructure/utils/: mod.rs  node_kind.rs
apps/cache_master/src/tests/: mod.rs
apps/cache_master/src/tests/test_mocks/: mod.rs
apps/cache_master/src/tests/usecases/: assign_node_use_case_test.rs  get_key_use_case_test.rs  mod.rs  put_key_use_case_test.rs  remove_node_use_case_test.rs
apps/cache_node/: .env.example  Cargo.toml
apps/cache_node/src/: app_common.rs  app_net.rs  cache.rs  main.rs  timing_wheel.rs
apps/cache_node/src/core/: mod.rs
apps/cache_node/src/core/domain/models/: command.rs  mod.rs  response.rs
apps/cache_node/src/core/domain/services/: cache_service.rs  mod.rs
apps/cache_node/src/core/services/: action_parser_service.rs  mod.rs  request_controller_service.rs
apps/cache_node/src/core/services/cache/: cache.rs  lru.rs  mod.rs  timing_wheel.rs
apps/cache_node/src/core/usecases/: get_use_case.rs  mod.rs  ping_use_case.rs  put_use_case.rs
apps/cache_node/src/infrastructure/: di.rs
apps/cache_node/src/infrastructure/adapters/services/: cache_service.rs
apps/cache_node/src/test_mocks/: cache_service_mock.rs
apps/cache_node/src/tests/: mod.rs
apps/cache_node/src/tests/services/: cache.rs
apps/cache_node/src/tests/test_mocks/: mod.rs
apps/cache_node/src/tests/usecases/: get_use_case_test.rs  mod.rs  ping_use_case_test.rs  put_use_case_test.rs
apps/cache_node/src/utils/: clock.rs
apps/client/: .env.example  Cargo.toml
apps/client/src/: client.rs  errors.rs  http.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  use_case.rs  utils.rs
crates/core/src/clock/: clock.rs  mod.rs  test.rs  time.rs
crates/net/: Cargo.toml
crates/net/src/: error.rs  lib.rs  message.rs  socket.rs  types.rs  utils.rs
crates/net/src/request/: data.rs  mod.rs
crates/net/src/response/: data.rs  mod.rs
request/: test.http
