[workspace]
resolver = "3"
members = [
  "apps/cache_node",
  "apps/cache_master",
  "apps/client",
  "crates/core",
  "crates/net",
]

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["full"] }
thiserror = { version = "2" }
dashmap = { version = "6.1.0" }
bytes = { version = "1.10.1" }
uuid = { version = "1.18.1", features = ["v4"] }
async-trait = { version = "0.1.89" }
tracing = { version = "0.1.41" }
tracing-subscriber = "0.3.20"
dotenvy = "0.15.7"
parking_lot = "0.12.4"

[workspace.package]
edition = "2024"
#rust-version = "1.89.0"
