[package]
name = "cache_master"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
app_net = { path = "../../crates/net" }
app_core = { path = "../../crates/core" }
parking_lot = "0.12.4"
