[package]
name = "cache_node"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }

app_net = { path = "../../crates/net" }
app_core = { path = "../../crates/core" }
