[package]
name = "cache_client"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
parking_lot = { workspace = true }

app_net = { path = "../../crates/net" }
app_core = { path = "../../crates/core" }

axum = { version = "0.8.6", features = ["macros", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
